fix scrollbar highlight issue

--- a/src/interpreter.css
+++ b/src/interpreter.css
@@ -1,14 +1,9 @@
 body {
-  height: 100vh;
-  overflow: hidden;
   margin: 0;
 }
 
 .page {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
 }
 
 .ERROR, .CRITICAL, .PANIC, .FATAL {
@@ -41,7 +36,8 @@ body {
 }
 
 .controls {
-  flex: 0 0 auto;
+  position: fixed;
+  top: 0;
   width: 100%;
   background: #f7f7f7;
   font-family: sans-serif;
@@ -51,10 +47,7 @@ body {
 }
 
 .lines {
-  flex: 1 1 auto;
-  position: relative;/* need this to position inner content */
-  overflow-y: auto;
-  margin: 0;
+  margin-top: 80px;
   padding: 10px;
 }
 
@@ -68,6 +61,6 @@ body {
 
 #clearHighlights {
   position : absolute;
-  right : 10px;
+  right : 20px;
 }
 
